--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,19 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
   </head>
-  <body>
+  <body class="text-primary">
     <img src="/images/inndura-logo-navy.svg" class="block mt-8 w-64 m-auto" />
     <section class="px-2">
-      <h1 class="text-xl text-center">
+      <h1 class="text-4xl my-10 text-center font-bold">
         The next-generation of innate durable immunotherapies
       </h1>
       <div class="bg-white flex items-center justify-center">
         Our website is under construction and coming soon
       </div>
-      <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-700">
-        <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+      <div
+        class="w-10/12 bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto"
+      >
+        <div class="bg-primary h-2.5 rounded-full" style="width: 45%"></div>
       </div>
       <div class="flex"></div>
     </section>
