--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,47 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
   </head>
-  <body class="text-primary">
-    <img src="/images/inndura-logo-navy.svg" class="block mt-8 w-64 m-auto" />
-    <section class="px-2">
-      <h1 class="text-4xl my-10 text-center font-bold">
+  <body class="text-primary text-center">
+    <img
+      src="/images/inndura-logo-navy.svg"
+      class="hidden md:block mt-8 w-64 m-auto"
+    />
+    <img
+      src="/images/inndura-logo-navy.svg"
+      class="block md:hidden mt-8 w-64 m-auto"
+    />
+    <section class="w-10/12 m-auto">
+      <h1 class="text-4xl my-10 font-bold">
         The next-generation of innate durable immunotherapies
       </h1>
       <div class="bg-white flex items-center justify-center">
         Our website is under construction and coming soon
       </div>
-      <div
-        class="w-10/12 bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto"
-      >
+      <div class="bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto">
         <div class="bg-primary h-2.5 rounded-full" style="width: 45%"></div>
       </div>
-      <div class="flex"></div>
+      <p class="">
+        We are hiring at all levels! Join our growing team located at LabCentral
+        Inc., Cambridge, MA. Contact us at:
+      </p>
+      <div class="flex">
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            strokeWidth="{1.5}"
+            stroke="currentColor"
+            class="w-6 h-6 bg-white rounded"
+          >
+            <path
+              strokeLinecap="round"
+              d="M16.5 12a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 10-2.636 6.364M16.5 12V8.25"
+            />
+          </svg>
+        </div>
+        <div></div>
+      </div>
     </section>
   </body>
 </html>
