--- a/src/index.html
+++ b/src/index.html
@@ -12,46 +12,50 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
   </head>
-  <body class="text-primary text-center">
+  <body class="text-white bg-backgroundColor text-center">
     <img
-      src="/images/inndura-logo-navy.svg"
+      src="/images/inddura-logo-white.svg"
       class="hidden md:block mt-8 w-64 m-auto"
     />
     <img
-      src="/images/inndura-logo-navy.svg"
+      src="/images/inddura-logo-white.svg"
       class="block md:hidden mt-8 w-64 m-auto"
     />
-    <section class="w-10/12 m-auto">
-      <h1 class="text-4xl my-10 font-bold">
+    <video autoplay muted loop width="320" height="240" class="absolute z-0">
+      <source src="/videos/bg-video.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+    <section class="w-10/12 m-auto relative">
+      <h1 class="text-5xl my-10 font-bold leading-tight">
         The next-generation of innate durable immunotherapies
       </h1>
-      <div class="bg-white flex items-center justify-center">
-        Our website is under construction and coming soon
+      <div class="flex items-center justify-center">
+        Our website is under construction and coming soon.
       </div>
-      <div class="bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto">
+      <div
+        class="bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto w-8/12 mb-12"
+      >
         <div class="bg-primary h-2.5 rounded-full" style="width: 45%"></div>
       </div>
       <p class="">
         We are hiring at all levels! Join our growing team located at LabCentral
         Inc., Cambridge, MA. Contact us at:
       </p>
-      <div class="flex">
-        <div>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            strokeWidth="{1.5}"
-            stroke="currentColor"
-            class="w-6 h-6 bg-white rounded"
-          >
-            <path
-              strokeLinecap="round"
-              d="M16.5 12a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 10-2.636 6.364M16.5 12V8.25"
-            />
-          </svg>
+      <div class="flex justify-between mt-20">
+        <div class="flex">
+          <img
+            src="/images/email.svg"
+            alt="Email "
+            class="w-6 mr-1"
+          />info@indurra.com
         </div>
-        <div></div>
+        <div class="flex">
+          <img
+            src="/images/linkedin.svg"
+            alt="Linkedin "
+            class="w-6 mr-1"
+          />innduratherapeutics
+        </div>
       </div>
     </section>
   </body>
