icons and basic mobile layout

--- a/src/index.html
+++ b/src/index.html
@@ -15,27 +15,35 @@
   <body class="text-white bg-backgroundColor text-center">
     <img
       src="/images/inddura-logo-white.svg"
-      class="hidden md:block mt-8 w-64 m-auto"
+      class="hidden md:block mt-8 w-72 m-auto relative z-10"
     />
     <img
       src="/images/inddura-logo-white.svg"
-      class="block md:hidden mt-8 w-64 m-auto"
+      class="block md:hidden mt-8 w-72 m-auto relative z-10"
     />
-    <video autoplay muted loop width="320" height="240" class="absolute z-0">
+    <video
+      autoplay
+      muted
+      loop
+      width="320"
+      height="240"
+      class="absolute z-0"
+      style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
       <source src="/videos/bg-video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <section class="w-10/12 m-auto relative">
-      <h1 class="text-5xl my-10 font-bold leading-tight">
+      <h1 class="text-4xl my-10 font-bold leading-tight">
         The next-generation of innate durable immunotherapies
       </h1>
       <div class="flex items-center justify-center">
         Our website is under construction and coming soon.
       </div>
       <div
-        class="bg-gray-200 rounded-full h-2.5 dark:bg-gray-700 m-auto w-8/12 mb-12"
+        class="bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 m-auto w-8/12 mb-12"
       >
-        <div class="bg-primary h-2.5 rounded-full" style="width: 45%"></div>
+        <div class="bg-white h-2.5 rounded-full" style="width: 45%"></div>
       </div>
       <p class="">
         We are hiring at all levels! Join our growing team located at LabCentral
@@ -44,16 +52,16 @@
       <div class="flex justify-between mt-20">
         <div class="flex">
           <img
-            src="/images/email.svg"
+            src="/images/email-white.svg"
             alt="Email "
-            class="w-6 mr-1"
+            class="w-6 mr-1 fill-white"
           />info@indurra.com
         </div>
         <div class="flex">
           <img
-            src="/images/linkedin.svg"
+            src="/images/linkedin-white.svg"
             alt="Linkedin "
-            class="w-6 mr-1"
+            class="w-6 mr-1 fill-white"
           />innduratherapeutics
         </div>
       </div>
