--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,19 @@
       autoplay
       muted
       loop
-      width="320"
-      height="240"
-      class="absolute z-0"
+      width="600"
+      height="600"
+      class="absolute z-0 xl:hidden"
       style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
     >
       <source src="/videos/bg-video.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
     <section class="w-10/12 m-auto relative">
-      <h1 class="text-4xl my-10 font-bold leading-tight">
+      <h1
+        class="text-4xl my-10 mx-auto font-bold leading-tight tracking-wide"
+        style="max-width: 400px"
+      >
         The next-generation of innate durable immunotherapies
       </h1>
       <div class="flex items-center justify-center">
@@ -66,5 +69,6 @@
         </div>
       </div>
     </section>
+    <section class="hidden xl:block">trada</section>
   </body>
 </html>
