split layout wip

--- a/src/index.html
+++ b/src/index.html
@@ -12,62 +12,64 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
   </head>
-  <body class="text-white bg-backgroundColor text-center">
-    <img
-      src="/images/inddura-logo-white.svg"
-      class="hidden md:block mt-8 w-72 m-auto relative z-10"
-    />
-    <img
-      src="/images/inddura-logo-white.svg"
-      class="block md:hidden mt-8 w-72 m-auto relative z-10"
-    />
-    <video
-      autoplay
-      muted
-      loop
-      width="600"
-      height="600"
-      class="absolute z-0 xl:hidden"
-      style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
-    >
-      <source src="/videos/bg-video.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-    <section class="w-10/12 m-auto relative">
-      <h1
-        class="text-4xl my-10 mx-auto font-bold leading-tight tracking-wide"
-        style="max-width: 400px"
+  <body class="text-white bg-backgroundColor text-center flex">
+    <section class="w-full xl:w-1/2 pt-8 xl:h-screen xl:bg-white">
+      <img
+        src="/images/inddura-logo-white.svg"
+        class="hidden md:block w-72 m-auto relative z-10"
+      />
+      <img
+        src="/images/inddura-logo-white.svg"
+        class="block md:hidden w-72 m-auto relative z-10"
+      />
+      <video
+        autoplay
+        muted
+        loop
+        width="600"
+        height="600"
+        class="absolute z-0 xl:hidden"
+        style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
-        The next-generation of innate durable immunotherapies
-      </h1>
-      <div class="flex items-center justify-center">
-        Our website is under construction and coming soon.
-      </div>
-      <div
-        class="bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 m-auto w-8/12 mb-12"
-      >
-        <div class="bg-white h-2.5 rounded-full" style="width: 45%"></div>
-      </div>
-      <p class="">
-        We are hiring at all levels! Join our growing team located at LabCentral
-        Inc., Cambridge, MA. Contact us at:
-      </p>
-      <div class="flex justify-between mt-20">
-        <div class="flex">
-          <img
-            src="/images/email-white.svg"
-            alt="Email "
-            class="w-6 mr-1 fill-white"
-          />info@indurra.com
+        <source src="/videos/bg-video.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+      <section class="w-10/12 m-auto relative">
+        <h1
+          class="text-4xl my-10 mx-auto font-bold leading-tight tracking-wide"
+          style="max-width: 400px"
+        >
+          The next-generation of innate durable immunotherapies
+        </h1>
+        <div class="flex items-center justify-center">
+          Our website is under construction and coming soon.
         </div>
-        <div class="flex">
-          <img
-            src="/images/linkedin-white.svg"
-            alt="Linkedin "
-            class="w-6 mr-1 fill-white"
-          />innduratherapeutics
+        <div
+          class="bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 m-auto w-8/12 mb-12"
+        >
+          <div class="bg-white h-2.5 rounded-full" style="width: 45%"></div>
         </div>
-      </div>
+        <p class="">
+          We are hiring at all levels! Join our growing team located at
+          LabCentral Inc., Cambridge, MA. Contact us at:
+        </p>
+        <div class="flex justify-between mt-20">
+          <div class="flex">
+            <img
+              src="/images/email-white.svg"
+              alt="Email "
+              class="w-6 mr-1 fill-white"
+            />info@indurra.com
+          </div>
+          <div class="flex">
+            <img
+              src="/images/linkedin-white.svg"
+              alt="Linkedin "
+              class="w-6 mr-1 fill-white"
+            />innduratherapeutics
+          </div>
+        </div>
+      </section>
     </section>
     <section class="hidden xl:block">trada</section>
   </body>
