--- a/src/index.html
+++ b/src/index.html
@@ -42,47 +42,63 @@
       </video>
       <section class="w-10/12 mx-auto relative">
         <h1
-          class="text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
+          class="text-2xl mt-28 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
           style="max-width: 400px"
         >
           The next-generation of innate durable immunotherapies
         </h1>
-        <div class="flex items-center justify-center xl:justify-start">
+        <div class="flex text-sm items-center justify-center xl:justify-start">
           Our website is under construction and coming soon.
         </div>
         <div
-          class="bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 mx-auto w-8/12 mb-12"
+          class="max-w-xs bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 mx-auto w-8/12 mb-12"
         >
-          <div class="bg-white h-2.5 rounded-full" style="width: 45%"></div>
+          <div class="bg-white h-2.5 rounded-full" style="width: 75%"></div>
         </div>
-        <p class="">
+        <p class="max-w-lg mx-auto xl:mx-0">
           We are hiring at all levels! Join our growing team located at
           LabCentral Inc., Cambridge, MA. Contact us at:
         </p>
-        <div class="flex justify-between mt-20">
-          <div class="flex">
-            <img
-              src="/images/email-white.svg"
-              alt="Email "
-              class="w-6 mr-1 block xl:hidden"
-            />
-            <img
-              src="/images/email-navy.svg"
-              alt="Email "
-              class="w-6 mr-1 hidden xl:block"
-            />info@indurra.com
+        <div class="flex justify-between mt-20 max-w-sm mx-auto xl:mx-0">
+          <div class="flex text-xsm items-center max-w-lg">
+            <a href="mailto:info@indurra.com" class="flex items-center">
+              <img
+                src="/images/email-white.svg"
+                alt="Email "
+                class="w-6 mr-1 block xl:hidden"
+              />
+            </a>
+            <a href="mailto:info@indurra.com" class="flex items-center">
+              <img
+                src="/images/email-navy.svg"
+                alt="Email "
+                class="w-6 mr-1 hidden xl:block"
+              />info@indurra.com
+            </a>
           </div>
-          <div class="flex xl:mr-10">
-            <img
-              src="/images/linkedin-white.svg"
-              alt="Linkedin "
-              class="w-6 mr-1 block xl:hidden"
-            />
-            <img
-              src="/images/linkedin-navy.svg"
-              alt="Linkedin "
-              class="w-6 mr-1 hidden xl:block"
-            />innduratherapeutics
+          <div class="flex text-xsm items-center xl:mr-10">
+            <a
+              href="https://www.linkedin.com/company/innduratherapeutics/"
+              target="_blank"
+              class="flex items-center"
+            >
+              <img
+                src="/images/linkedin-white.svg"
+                alt="Linkedin "
+                class="w-6 mr-1 block xl:hidden"
+              />
+            </a>
+            <a
+              href="https://www.linkedin.com/company/innduratherapeutics/"
+              target="_blank"
+              class="flex items-center"
+            >
+              <img
+                src="/images/linkedin-navy.svg"
+                alt="Linkedin "
+                class="w-6 mr-1 hidden xl:block"
+              />innduratherapeutics
+            </a>
           </div>
         </div>
       </section>
@@ -98,7 +114,6 @@
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
         <source src="/videos/bg-video.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
       </video>
     </section>
   </body>
