--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         autoplay
         muted
         loop
-        width="600"
-        height="600"
+        width="520"
+        height="520"
         class="absolute z-0 xl:hidden"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
@@ -42,24 +42,27 @@
       </video>
       <section class="w-10/12 mx-auto relative">
         <h1
-          class="text-2xl mt-28 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
+          class="text-2xl mt-32 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
           style="max-width: 400px"
         >
           The next-generation of innate durable immunotherapies
         </h1>
-        <div class="flex text-sm items-center justify-center xl:justify-start">
+        <div class="flex text-xsm items-center justify-center xl:justify-start">
           Our website is under construction and coming soon.
         </div>
         <div
-          class="max-w-xs bg-transparent border-white border rounded-full h-2.5 dark:bg-gray-700 mx-auto w-8/12 mb-12"
+          class="max-w-xs bg-transparent border-white xl:border-primary border rounded-full h-2.5 dark:bg-gray-700 mx-auto xl:mx-0 w-8/12 mb-12"
         >
-          <div class="bg-white h-2.5 rounded-full" style="width: 75%"></div>
+          <div
+            class="bg-white xl:bg-primary h-2.5 rounded-full"
+            style="width: 75%"
+          ></div>
         </div>
-        <p class="max-w-lg mx-auto xl:mx-0">
+        <p class="max-w-lg mx-auto mt-20 text-xsm xl:mx-0">
           We are hiring at all levels! Join our growing team located at
           LabCentral Inc., Cambridge, MA. Contact us at:
         </p>
-        <div class="flex justify-between mt-20 max-w-sm mx-auto xl:mx-0">
+        <div class="flex justify-between mt-4 max-w-sm mx-auto xl:mx-0">
           <div class="flex text-xsm items-center max-w-lg">
             <a href="mailto:info@indurra.com" class="flex items-center">
               <img
