--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,14 @@
       </video>
       <section class="w-10/12 mx-auto relative">
         <h1
-          class="text-2xl mt-32 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
+          class="text-2xl mt-52 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
           style="max-width: 400px"
         >
           The next-generation of innate durable immunotherapies
         </h1>
-        <div class="flex text-xsm items-center justify-center xl:justify-start">
+        <div
+          class="flex text-xsm items-center justify-center xl:justify-start mt-16 mb-4"
+        >
           Our website is under construction and coming soon.
         </div>
         <div
@@ -58,12 +60,12 @@
             style="width: 75%"
           ></div>
         </div>
-        <p class="max-w-lg mx-auto mt-20 text-xsm xl:mx-0">
+        <p class="max-w-md mx-auto mt-32 text-xsm xl:mx-0">
           We are hiring at all levels! Join our growing team located at
           LabCentral Inc., Cambridge, MA. Contact us at:
         </p>
         <div class="flex justify-between mt-4 max-w-sm mx-auto xl:mx-0">
-          <div class="flex text-xsm items-center max-w-lg">
+          <div class="flex text-xsm items-center max-w-md">
             <a href="mailto:info@indurra.com" class="flex items-center">
               <img
                 src="/images/email-white.svg"
