more fine tuning

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             style="width: 75%"
           ></div>
         </div>
-        <p class="max-w-md mx-auto mt-32 text-xsm xl:mx-0">
+        <p class="max-w-md mx-auto mt-18 lg:mt-32 text-xsm xl:mx-0">
           We are hiring at all levels! Join our growing team located at
           LabCentral Inc., Cambridge, MA. Contact us at:
         </p>
@@ -78,7 +78,8 @@
                 src="/images/email-navy.svg"
                 alt="Email "
                 class="w-6 mr-1 hidden xl:block"
-              />info@indurra.com
+              />
+              <span class="text-xxsm md:text-sm">info@indurra.com</span>
             </a>
           </div>
           <div class="flex text-xsm items-center xl:mr-10">
@@ -102,7 +103,7 @@
                 src="/images/linkedin-navy.svg"
                 alt="Linkedin "
                 class="w-6 mr-1 hidden xl:block"
-              />innduratherapeutics
+              /><span class="text-xxsm md:text-sm">innduratherapeutics</span>
             </a>
           </div>
         </div>
