--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         loop
         width="520"
         height="520"
-        class="absolute z-0 xl:hidden"
+        class="absolute z-0 xl:hidden rounded-full"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
         <source src="/videos/bg-video.mp4" type="video/mp4" />
@@ -116,7 +116,7 @@
         loop
         width="600"
         height="600"
-        class="absolute z-0"
+        class="absolute z-0 rounded-full"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
         <source src="/videos/bg-video.mp4" type="video/mp4" />
