--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       </video>
       <section class="w-10/12 mx-auto relative">
         <h1
-          class="text-2xl mt-52 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
+          class="text-3xl mt-36 md:mt-52 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
           style="max-width: 400px"
         >
           The next-generation of innate durable immunotherapies
