adjust planet size

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <section
       class="w-full xl:w-1/2 pt-8 xl:pt-0 xl:h-screen xl:bg-white flex flex-col justify-center"
     >
-      <div class="xl:w-10/12 xl:mx-auto">
+      <div class="xl:w-10/12 xl:pl-20 2xl:pl-32 xl:mx-auto">
         <img
           src="/images/inddura-logo-navy.svg"
           class="hidden xl:block w-80 mx-auto relative z-10 xl:ml-0"
@@ -40,7 +40,7 @@
         <source src="/videos/bg-video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
-      <section class="w-10/12 mx-auto relative">
+      <section class="w-10/12 xl:pl-20 2xl:pl-32 mx-auto relative">
         <h1
           class="text-3xl mt-36 md:mt-52 md:text-4xl my-10 mx-auto font-bold leading-tight tracking-wide xl:ml-0"
           style="max-width: 400px"
@@ -114,9 +114,7 @@
         autoplay
         muted
         loop
-        width="600"
-        height="600"
-        class="absolute z-0 rounded-full"
+        class="absolute z-0 rounded-full w-moonSmall 2xl:w-moon"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
         <source src="/videos/bg-video.mp4" type="video/mp4" />
