--- a/src/index.html
+++ b/src/index.html
@@ -53,14 +53,14 @@
           Our website is under construction and coming soon.
         </div>
         <div
-          class="max-w-xs bg-transparent border-white xl:border-primary border rounded-full h-2.5 dark:bg-gray-700 mx-auto xl:mx-0 w-8/12 mb-12"
+          class="max-w-xs bg-transparent border-white xl:border-primary border rounded-full h-2.5 mx-auto xl:mx-0 w-8/12 mb-12"
         >
           <div
             class="bg-white xl:bg-primary h-2.5 rounded-full"
-            style="width: 75%"
+            style="width: 75%; margin-top: -1px"
           ></div>
         </div>
-        <p class="max-w-md mx-auto mt-24 lg:mt-32 text-xsm xl:mx-0">
+        <p class="max-w-md mx-auto mt-28 xl:mt-32 text-xsm xl:mx-0">
           We are hiring at all levels! Join our growing team located at
           LabCentral Inc., Cambridge, MA. Contact us at:
         </p>
