--- a/src/index.html
+++ b/src/index.html
@@ -66,20 +66,20 @@
         </p>
         <div class="flex justify-between mt-4 max-w-sm mx-auto xl:mx-0">
           <div class="flex text-xsm items-center max-w-md">
-            <a href="mailto:info@indurra.com" class="flex items-center">
+            <a href="mailto:info@inndurra.com" class="flex items-center">
               <img
                 src="/images/email-white.svg"
                 alt="Email "
                 class="w-6 mr-1 block xl:hidden"
               />
             </a>
-            <a href="mailto:info@indurra.com" class="flex items-center">
+            <a href="mailto:info@inndurra.com" class="flex items-center">
               <img
                 src="/images/email-navy.svg"
                 alt="Email "
                 class="w-6 mr-1 hidden xl:block"
               />
-              <span class="text-xxsm md:text-sm">info@indurra.com</span>
+              <span class="text-xxsm md:text-sm">info@inndurra.com</span>
             </a>
           </div>
           <div class="flex text-xsm items-center xl:mr-10">
