add relative file paths

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
     >
       <div class="xl:w-10/12 xl:pl-20 2xl:pl-32 xl:mx-auto">
         <img
-          src="/images/inddura-logo-navy.svg"
+          src="./images/inddura-logo-navy.svg"
           class="hidden xl:block w-80 mx-auto relative z-10 xl:ml-0"
         />
         <img
-          src="/images/inddura-logo-white.svg"
+          src="./images/inddura-logo-white.svg"
           class="block xl:hidden w-80 mx-auto relative z-10 xl:ml-0"
         />
       </div>
@@ -37,7 +37,7 @@
         class="absolute z-0 xl:hidden rounded-full"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
-        <source src="/videos/bg-video.mp4" type="video/mp4" />
+        <source src="./videos/bg-video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
       <section class="w-10/12 xl:pl-20 2xl:pl-32 mx-auto relative">
@@ -68,14 +68,14 @@
           <div class="flex text-xsm items-center max-w-md">
             <a href="mailto:info@inndurra.com" class="flex items-center">
               <img
-                src="/images/email-white.svg"
+                src="./images/email-white.svg"
                 alt="Email "
                 class="w-6 mr-1 block xl:hidden"
               />
             </a>
             <a href="mailto:info@inndurra.com" class="flex items-center">
               <img
-                src="/images/email-navy.svg"
+                src="./images/email-navy.svg"
                 alt="Email "
                 class="w-6 mr-1 hidden xl:block"
               />
@@ -89,7 +89,7 @@
               class="flex items-center"
             >
               <img
-                src="/images/linkedin-white.svg"
+                src="./images/linkedin-white.svg"
                 alt="Linkedin "
                 class="w-6 mr-1 block xl:hidden"
               />
@@ -100,7 +100,7 @@
               class="flex items-center"
             >
               <img
-                src="/images/linkedin-navy.svg"
+                src="./images/linkedin-navy.svg"
                 alt="Linkedin "
                 class="w-6 mr-1 hidden xl:block"
               /><span class="text-xxsm md:text-sm">innduratherapeutics</span>
@@ -117,7 +117,7 @@
         class="absolute z-0 rounded-full w-moonSmall 2xl:w-moon"
         style="top: 50%; left: 50%; transform: translate(-50%, -50%)"
       >
-        <source src="/videos/bg-video.mp4" type="video/mp4" />
+        <source src="./videos/bg-video.mp4" type="video/mp4" />
       </video>
     </section>
   </body>
