update scaling and seo

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Basic HTML/Tailwind starter</title>
-    <meta name="description" content="Basic HTML/Tailwind starter" />
+    <title>InnDura</title>
+    <meta
+      name="description"
+      content="The next-generation of innate durable immunotherapies"
+    />
     <meta name="author" content="Daily Dev Tips" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
